review comment fixes
Signed-off-by: abhishek-sa1 <abhishek.sa3@dell.com>

--- a/provision/roles/xcat_discovery_provision/templates/omnia_service_script.sh.j2
+++ b/provision/roles/xcat_discovery_provision/templates/omnia_service_script.sh.j2
@@ -1,6 +1,6 @@
 #!/bin/sh
 while true
 do
- python3.9 {{ role_path }}/files/utils/monitor_status.py
+ {{ python_version }} {{ role_path }}/files/utils/monitor_status.py
  sleep 180
 done
